add packaging dependency

--- a/InternalLabs.PDF/InternalLabs.PDF.Activities.Design/InternalLabs.PDF.Activities.Design.csproj
+++ b/InternalLabs.PDF/InternalLabs.PDF.Activities.Design/InternalLabs.PDF.Activities.Design.csproj
@@ -71,6 +71,9 @@
     <PackageReference Include="System.Activities.Metadata" Version="6.0.0-*" PrivateAssets="All"/>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Spire.PDF" Version="10.4.7" />
+  </ItemGroup>
+  <ItemGroup>
     <Page Include="..\..\Shared\Themes\Generic.xaml">
       <Link>Themes\Generic.xaml</Link>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
